fixed spacing

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html, body {
     width: 88px;
     height: 88px;
     border-radius: 50%;
-    margin-bottom: 14px;
+    margin-bottom: 16px;
 }
 
 
@@ -95,7 +95,7 @@ html, body {
 .social li {
     display: flex;
     height: 44px;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
     background-color: var(--grey_700);
     border-radius: 8px;
 }
@@ -154,6 +154,7 @@ html, body {
     
     .name {
         margin: 15px;
+        font-size: 20px;
     }
     
     
